Update and rename 2015-10-01-paper-title-number-3.md to PCCP_2020.md

--- a/_publications/PCCP_2020.md
+++ b/_publications/PCCP_2020.md
@@ -2,7 +2,7 @@
 title: "First-principles investigation of band offset and charge transfer characteristics at the PE/fluorinated layer interface"
 collection: publications
 category: manuscripts
-permalink: /publication/2015-10-01-paper-title-number-3
+permalink: /publication/PCCP_2020
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2015-10-01
 venue: 'Journal 1'
