--- a/_publications/JAP_2019.md
+++ b/_publications/JAP_2019.md
@@ -2,7 +2,7 @@
 title: "First-principle investigation of the charge injection barriers of polyethylene and polytetrafluoroethylene oligomers"
 collection: publications
 category: manuscripts
-permalink: /publication/2010-10-01-paper-title-number-2
+permalink: /publication/JAP_2019
 excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2010-10-01
 venue: 'Journal 1'
