--- a/_publications/JCTC_2025.md
+++ b/_publications/JCTC_2025.md
@@ -2,7 +2,7 @@
 title: "Paper Title Number 4"
 collection: publications
 category: manuscripts
-permalink: /publication/2024-02-17-paper-title-number-4
+permalink: /publication/JCTC_2025
 excerpt: 'This paper is about fixing template issue #693.'
 date: 2024-02-17
 venue: 'GitHub Journal of Bugs'
