--- a/_publications/JCTC_2025.md
+++ b/_publications/JCTC_2025.md
@@ -1,9 +1,9 @@
 ---
-title: "Paper Title Number 4"
+title: "Machine-learning-assisted Evaluation of Charge Mobility in Stretched Molecular Single Crystals"
 collection: publications
 category: manuscripts
 permalink: /publication/JCTC_2025
-excerpt: 'This paper is about fixing template issue #693.'
+excerpt: 'In preparation from 2024.'
 date: 2024-02-17
 venue: 'GitHub Journal of Bugs'
 paperurl: 'http://academicpages.github.io/files/paper3.pdf'
