--- a/_publications/JAP_2019.md
+++ b/_publications/JAP_2019.md
@@ -1,14 +1,15 @@
 ---
-title: "First-principle investigation of the charge injection barriers of polyethylene and polytetrafluoroethylene oligomers"
+title: "First-principle Investigation of the Charge Injection Barriers of Polyethylene and Polytetrafluoroethylene Oligomers"
 collection: publications
 category: manuscripts
 permalink: /publication/JAP_2019
-excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
-date: 2010-10-01
-venue: 'Journal 1'
+excerpt: 'In this paper, we present a microscale understanding of the origins and comparative analysis of charge injection barriers from metal to polyethylene and polytetrafluoroethylene.'
+date: 2019-07-15
+venue: 'Journal of Applied Physics'
 slidesurl: 'http://academicpages.github.io/files/slides2.pdf'
 paperurl: 'https://puying1994.github.io/files/JAP_2019.pdf'
-citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2).'
+citation: 'Chen, X. et al. First-Principle Investigation of the Charge Injection Barriers of Polyethylene and Polytetrafluoroethylene Oligomers. Journal of Applied Physics 2019, 126 (3), 035101. https://doi.org/10.1063/1.5089863.
+'
 ---
 
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
