--- a/_publications/PCCP_2020.md
+++ b/_publications/PCCP_2020.md
@@ -1,14 +1,14 @@
 ---
-title: "First-principles investigation of band offset and charge transfer characteristics at the PE/fluorinated layer interface"
+title: "First-principles Investigation of Band Offset and Charge Transfer Characteristics at the PE/fluorinated Layer Interface"
 collection: publications
 category: manuscripts
 permalink: /publication/PCCP_2020
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
-date: 2015-10-01
+date: 2020-07-16
 venue: 'Journal 1'
 slidesurl: 'http://academicpages.github.io/files/slides3.pdf'
 paperurl: 'https://puying1994.github.io/files/PCCP_2020.pdf'
-citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
+citation: 'Chen, X. et al. First-Principles Investigation of Band Offset and Charge Transfer Characteristics at the PE/Fluorinated Layer Interface. Phys. Chem. Chem. Phys. 2020, 22 (39), 22207–22216. https://doi.org/10.1039/D0CP01992E.'
 ---
 
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
