--- a/_publications/PCCP_2020.md
+++ b/_publications/PCCP_2020.md
@@ -3,9 +3,9 @@ title: "First-principles Investigation of Band Offset and Charge Transfer Charac
 collection: publications
 category: manuscripts
 permalink: /publication/PCCP_2020
-excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
+excerpt: 'In this paper, we discuss the band offset at the interface between polyethylene and its fluorinated layer, as well as its impact on inhibiting charge transport.'
 date: 2020-07-16
-venue: 'Journal 1'
+venue: 'Physical Chemistry Chemical Physics'
 slidesurl: 'http://academicpages.github.io/files/slides3.pdf'
 paperurl: 'https://puying1994.github.io/files/PCCP_2020.pdf'
 citation: 'Chen, X. et al. First-Principles Investigation of Band Offset and Charge Transfer Characteristics at the PE/Fluorinated Layer Interface. Phys. Chem. Chem. Phys. 2020, 22 (39), 22207–22216. https://doi.org/10.1039/D0CP01992E.'
