--- a/_publications/JAP_2019.md
+++ b/_publications/JAP_2019.md
@@ -3,7 +3,7 @@ title: "First-principle Investigation of the Charge Injection Barriers of Polyet
 collection: publications
 category: manuscripts
 permalink: /publication/JAP_2019
-excerpt: 'In this paper, we present a microscale understanding of the origins and comparative analysis of charge injection barriers from metal to polyethylene and polytetrafluoroethylene.'
+excerpt: 'In this paper, we present a microscale understanding of the origins and comparative analysis of charge injection barriers from metal to polyethylene and polytetrafluoroethylene. This paper has been selected as journal cover.'
 date: 2019-07-15
 venue: 'Journal of Applied Physics'
 paperurl: 'https://puying1994.github.io/files/JAP_2019.pdf'
