--- a/_publications/PCCP_2020.md
+++ b/_publications/PCCP_2020.md
@@ -3,7 +3,7 @@ title: "First-principles Investigation of Band Offset and Charge Transfer Charac
 collection: publications
 category: manuscripts
 permalink: /publication/PCCP_2020
-excerpt: 'In this paper, we discuss the band offset at the interface between polyethylene and its fluorinated layer, as well as its impact on inhibiting charge transport.'
+excerpt: 'In this paper, we discuss the band offset at the interface between polyethylene and its fluorinated layer, as well as its impact on inhibiting charge transport.  This paper has been selected as journal back cover.'
 date: 2020-07-16
 venue: 'Physical Chemistry Chemical Physics'
 paperurl: 'https://puying1994.github.io/files/PCCP_2020.pdf'
